[package]
name = "mobc-tonic"
version = "0.1.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
mobc = "0.7"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tonic = { version = "0.4", features = ["transport", "tls"] }

[dev-dependencies]
prost = "0.7"
anyhow = "1"
tokio = "1"
toml = "0.5"

[build-dependencies]
tonic-build = { version = "0.4"}
