[package]
name = "mobc-tonic"
version = "0.1.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/mobc-tonic"
repository = "https://github.com/tyrchen/mobc-tonic"
homepage = "https://github.com/tyrchen/mobc-tonic"
description = """
A connection pool for tonic GRPC client.
"""
readme = "../README.md"
categories = ["development-tools"]
keywords = ["grpc", "tonic"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
mobc = "0.7"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tonic = { version = "0.4", features = ["transport", "tls"] }
tracing = "0.1"

[dev-dependencies]
prost = "0.7"
anyhow = "1"
tokio = "1"
toml = "0.5"
tracing-subscriber = "0.2"

[build-dependencies]
tonic-build = { version = "0.4"}
